<resources>
    <string name="app_name">MoodleUkol1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="second_name">Second name</string>
    <string name="address">Address</string>
    <string name="phone">Phone nr.</string>
    <string name="email">Email</string>
    <string name="days">Days</string>
    <string name="breakfast">Breakfast</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="reservation">Room reservation</string>
    <string name="emailValidation">Please enter valid email!</string>
    <string name="nameValidation">Please fill your name!</string>
    <string name="phoneValidation">Please fill valid phone nr.!</string>
</resources>
