<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.psblk.moodleukol1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <!--Abychom neměli ihned po otevření aplikace focus na
        prvním textovém poli a otevřenou klávesnici:
        android:focusable="true"
        android:focusableInTouchMode="true"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="#eeeeee"
            android:id="@+id/layout"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/reservation"
                style="@style/heading"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/name"
                style="@style/label" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/address" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Date" />

            <EditText
                android:id="@+id/datum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="ShowPicker"

                />

            <TextView style="@style/label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/days" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/days">

            </Spinner>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView style="@style/label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/breakfast" />
                <CheckBox
                    android:id="@+id/breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:id="@+id/send"
                    android:padding="10dp"
                    android:text="@string/send"
                    android:drawableLeft="@drawable/ic_action_done"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset"
                    android:text="@string/reset"
                    android:drawableLeft="@drawable/ic_navigation_close"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>